fffc_src += files(
    'fffc_constants.f90',
    'fffc_filesystem_is_windows.f90',
    'fffc_filesystem_mkdir.f90',
    'fffc_filesystem_rmdir.f90',
    'fffc_filesystem.f90',
    'fffc_kinds.F90',
    'fffc_linalg_eye.f90',
    'fffc_linalg_diag.f90',
    'fffc_linalg_det.F90',
    'fffc_linalg_inv.F90',
    'fffc_linalg_solve.F90',
    'fffc_linalg.f90',
    'fffc_math_cross_product.f90',
    'fffc_math.f90',
    'fffc_module.f90',
)
