fffc_src += files(
    'fffc_constants.f90',
    'fffc_filesystem_is_exist.F90',
    'fffc_filesystem_is_windows.f90',
    'fffc_filesystem_mkdir.f90',
    'fffc_filesystem_rmdir.f90',
    'fffc_filesystem.f90',
    'fffc_kinds.F90',
    'fffc_linalg_eye.f90',
    'fffc_linalg_gemm.F90',
    'fffc_linalg_diag.f90',
    'fffc_linalg_det.F90',
    'fffc_linalg_inv_func.f90',
    'fffc_linalg_inv.F90',
    'fffc_linalg_solve_func.f90',
    'fffc_linalg_solve.F90',
    'fffc_linalg.f90',
    'fffc_math_arange.f90',
    'fffc_math_arg.f90',
    'fffc_math_cross_product.f90',
    'fffc_math_diff.f90',
    'fffc_math_is_close.f90',
    'fffc_math_linspace.f90',
    'fffc_math.f90',
    'fffc_module.f90',
    'fffc_random_randn.f90',
    'fffc_random_randu.f90',
    'fffc_random.f90',
    'fffc_stats_mean.f90',
    'fffc_stats.f90',
    'fffc_string_to_lower.f90',
    'fffc_string_to_string.f90',
    'fffc_string_to_upper.f90',
    'fffc_string.f90',
    'fffc_terminal.F90',
    'fffc_time.f90',
    'fffc_utils_bubble_sort.f90',
    'fffc_utils_is_env.f90',
    'fffc_utils_swap.f90',
    'fffc_utils.f90',
)
